--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,18 @@
             <artifactId>jjwt</artifactId>
             <version>0.12.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
