--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=gamba-api
 server.port=8889
+spring.datasource.url=jdbc:mysql://localhost:3306/pokemon_gamba
+spring.datasource.username=root
+spring.datasource.password=password
