--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8889
 spring.datasource.url=jdbc:mysql://localhost:3306/pokemon_gamba
 spring.datasource.username=root
 spring.datasource.password=password
+
+pokemon.api.url=http://localhost:8888
