--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pokemon_gamba
 spring.datasource.username=root
 spring.datasource.password=password
 
-pokemon.api.url=http://localhost:8888
+pokemon.api.url=http://127.0.0.1:8888
+inventory.api.url=http://127.0.0.1:8890
