--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=password
 
 pokemon.api.url=http://127.0.0.1:8888
 inventory.api.url=http://127.0.0.1:8890
+
+self.api.host=http://127.0.0.1:8889
